--- a/tb/fase_3/F3.md
+++ b/tb/fase_3/F3.md
@@ -1,6 +1,6 @@
 # Tugas Besar Gamtek Fase 3
 
-1. Deskripsi kerja
-2. File terpusat
+1. [Deskripsi kerja](https://github.com/dinagoethe/gamteks/blob/main/tb/fase_3/jobdesc.md)
+2. [File terpusat](https://drive.google.com/drive/folders/1uD14L4GDX1ogKDvAAIxZCf2CEA7OvdRX?usp=share_link)
 - File 3D dan video tour
 - File video presentasi
