--- a/tb/fase_3/F3.md
+++ b/tb/fase_3/F3.md
@@ -1,6 +1,14 @@
 # Tugas Besar Gamtek Fase 3
 
 1. [Deskripsi kerja](https://github.com/dinagoethe/gamteks/blob/main/tb/fase_3/jobdesc.md)
-2. [File terpusat](https://drive.google.com/drive/folders/1uD14L4GDX1ogKDvAAIxZCf2CEA7OvdRX?usp=share_link)
+2. [File dasar](https://drive.google.com/drive/folders/17kwE8erl_HjmY--pMBMHkMcIN7tYwOhO?usp=sharing)
+  - [Denah 1/2 bata](https://drive.google.com/drive/folders/1IoXB41k-4hO8QMK9VdEScfksRpvI_BAT?usp=sharing)
+  - [Tampak Fasad](https://drive.google.com/drive/folders/1JLTBn-7X6AqoeliVl0l4377whBO3pU-9?usp=sharing)
+  - [Potongan](https://drive.google.com/drive/folders/199KIpw26bw6WwUvSo6sE14dgupvSaz9i?usp=sharing)
+  - [RAB](https://docs.google.com/spreadsheets/d/1_19aawAHR1To6zbuiiePQ8mVtFiT0BAn/edit?usp=share_link&ouid=102172680674629401624&rtpof=true&sd=true)
+  - [Gambar manual](https://drive.google.com/drive/folders/1NZ7eUUSfgrPBre8wUVX-As9ilKneiTvj?usp=sharing)
+ 
+3. [File terpusat](https://drive.google.com/drive/folders/1uD14L4GDX1ogKDvAAIxZCf2CEA7OvdRX?usp=share_link)
+Folder drive ini dikhususkan untuk pengumpulan tugas setiap anggota seperti:
 - File 3D dan video tour
 - File video presentasi
