--- a/tb/fase_3/F3.md
+++ b/tb/fase_3/F3.md
@@ -1,14 +1,19 @@
 # Tugas Besar Gamtek Fase 3
 
-1. [Deskripsi kerja](https://github.com/dinagoethe/gamteks/blob/main/tb/fase_3/jobdesc.md)
-2. [File dasar](https://drive.google.com/drive/folders/17kwE8erl_HjmY--pMBMHkMcIN7tYwOhO?usp=sharing)
+## 1. [Deskripsi kerja](https://github.com/dinagoethe/gamteks/blob/main/tb/fase_3/jobdesc.md)
+Terdapat pembagian tugas anggota (sangat diharapkan inisiatif sendiri dan memiliki kemauan untuk belajar hal baru) dan deskripsi kerja agar dapat menggambarkan tugas-tugas yang harus dilaksanakan setiap anggota. Silakan di klik link pada [judul](https://github.com/dinagoethe/gamteks/blob/main/tb/fase_3/jobdesc.md) untuk melihat deskripsi kerja dan ceklis tugas yang diinginkan di file [excel](https://docs.google.com/spreadsheets/d/14oqL5nb135_fkNvy_8cI5Ly50nLEfsnM2zNDKuP76bM/edit?usp=share_link).
+
+## 2. [File dasar](https://drive.google.com/drive/folders/1M1RsxHXx93l6aguat95yG0ETcBXKCGy3?usp=share_link)
+Gambar acuan dalam mengerjakan tugas fase 3 ini. Digunakan file pdf dan .dwg berikut:
   - [Denah 1/2 bata](https://drive.google.com/drive/folders/1IoXB41k-4hO8QMK9VdEScfksRpvI_BAT?usp=sharing)
   - [Tampak Fasad](https://drive.google.com/drive/folders/1JLTBn-7X6AqoeliVl0l4377whBO3pU-9?usp=sharing)
   - [Potongan](https://drive.google.com/drive/folders/199KIpw26bw6WwUvSo6sE14dgupvSaz9i?usp=sharing)
   - [RAB](https://docs.google.com/spreadsheets/d/1_19aawAHR1To6zbuiiePQ8mVtFiT0BAn/edit?usp=share_link&ouid=102172680674629401624&rtpof=true&sd=true)
   - [Gambar manual](https://drive.google.com/drive/folders/1NZ7eUUSfgrPBre8wUVX-As9ilKneiTvj?usp=sharing)
  
-3. [File terpusat](https://drive.google.com/drive/folders/1uD14L4GDX1ogKDvAAIxZCf2CEA7OvdRX?usp=share_link)
+## 3. [File terpusat](https://drive.google.com/drive/folders/1uD14L4GDX1ogKDvAAIxZCf2CEA7OvdRX?usp=share_link)
 Folder drive ini dikhususkan untuk pengumpulan tugas setiap anggota seperti:
-- File 3D dan video tour
-- File video presentasi
+- 3D modeling
+- Video tour
+- PPT
+- Video final (presentasi)
