--- a/tb/fase_3/F3.md
+++ b/tb/fase_3/F3.md
@@ -17,3 +17,5 @@ Folder drive ini dikhususkan untuk pengumpulan tugas setiap anggota seperti:
 - Video tour
 - PPT
 - Video final (presentasi)
+
+## 4. Referensi
